@@ -82,6 +82,12 @@ path = /bin:/usr/bin:/usr/local/bin
 update_files = \.rules$|\.config$|\.conf$|\.txt$|\.map$
 
 
+# Regexp of keywords that starts a snort rule.
+# May be useful if you create your own ruletypes and want those
+# lines to be regarded as rules as well.
+# rule_actions = alert|drop|log|pass|reject|sdrop|activate|dynamic
+
+
 # If the number of rules files in the downloaded archive matching the
 # 'update_files' regexp is below min_files, or if the total number
 # of rules in it is below min_rules, the archive is regarded as
